--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "popper.js": "^1.12",
         "vue": "^2.5.17",
         "vue-router": "^3.0.1",
-        "bootstrap-vue": "^2.0.0-rc.11"
+        "bootstrap-vue": "^2.0.0-rc.11",
+        "vuex": "^3.0.1"
     }
 }
