--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.17",
         "vue-router": "^3.0.1",
         "bootstrap-vue": "^2.0.0-rc.11",
-        "vuex": "^3.0.1"
+        "vuex": "^3.0.1",
+        "vue-cookies": "^1.5.7"
     }
 }
