--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
         "vue-cookies": "^1.5.7"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.8",
+        "@fortawesome/free-solid-svg-icons": "^5.5.0",
+        "@fortawesome/vue-fontawesome": "^0.1.3",
+        "i": "^0.3.6",
+        "npm": "^6.4.1",
         "vue-beautiful-foxchat": "^2.2.2"
     }
 }
