--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@fortawesome/vue-fontawesome": "^0.1.3",
         "i": "^0.3.6",
         "npm": "^6.4.1",
-        "vue-beautiful-foxchat": "^2.2.2"
+        "vue-beautiful-foxchat": "^2.2.2",
+        "vuex-persistedstate": "^2.5.4"
     }
 }
