--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "@fortawesome/free-solid-svg-icons": "^5.5.0",
         "@fortawesome/vue-fontawesome": "^0.1.3",
         "i": "^0.3.6",
+        "laravel-echo": "^1.5.2",
         "npm": "^6.4.1",
+        "pusher-js": "^4.3.1",
         "vue-beautiful-foxchat": "^2.2.2",
         "vuex-persistedstate": "^2.5.4"
     }
