--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "devDependencies": {
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
+        "bootstrap-vue": "^2.0.0-rc.11",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.15.3",
+        "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
+        "vue-cookies": "^1.5.7",
         "vue-router": "^3.0.1",
-        "bootstrap-vue": "^2.0.0-rc.11",
-        "vuex": "^3.0.1",
-        "vue-cookies": "^1.5.7"
+        "vue-template-compiler": "^2.5.21",
+        "vuex": "^3.0.1"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.12",
