--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "npm": "^6.4.1",
         "pusher-js": "^4.3.1",
         "vue-beautiful-foxchat": "^2.2.3",
+        "vue-multilanguage": "^4.0.7",
         "vuex-persistedstate": "^2.5.4"
     }
 }
