--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@fortawesome/vue-fontawesome": "^0.1.3",
         "i": "^0.3.6",
         "laravel-echo": "^1.5.2",
+        "mdbvue": "^4.10.1",
         "npm": "^6.4.1",
         "pusher-js": "^4.3.1",
         "vue-beautiful-foxchat": "^2.2.3",
